fix: remove outdated generate-pdf function config from vercel.json
- Remove app/api/courses/generate-pdf/route.ts from functions config
- Keep only app/api/inngest/route.ts configuration
- generate-pdf now uses Inngest and has maxDuration=30 in code

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,17 @@
 {
   "functions": {
-    "app/api/courses/generate-pdf/route.ts": {
+    "app/api/inngest/route.ts": {
       "maxDuration": 300
     }
   },
   "env": {
   },
   "buildCommand": "npm run build",
-  "installCommand": "npm install"
+  "installCommand": "npm install",
+  "rewrites": [
+    {
+      "source": "/api/inngest",
+      "destination": "/api/inngest"
+    }
+  ]
 }
